# SCA

./: .gitignore  03_feature_extraction.ipynb  ASCAD_v1.md  README.md  SBOX.md  codalej.txt  combine_feats.py  combined_feats_ttest.py  download.py  download_ascad.py  download_data.py  mlp.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
configs/: config.yaml
nn/: mlp.py  util.py
notebooks/: 00_eda.ipynb  01_cpa&anova.ipynb  01_eda.ipynb  01_initial_eda.ipynb  02_baseline.ipynb  02_cleaning.ipynb  02_data_cleaning.ipynb  03_baseline.ipynb  03_cleaning.ipynb  03_feature_extraction.ipynb  04_feature_analysis_ttest.ipynb  04_feature_extraction.ipynb  04_simple_classifiers.ipynb  04_simplerf.ipynb  05_lgb.ipynb  05_rf&qda.ipynb  05_simple_classifiers.ipynb  06_feat_engineering.ipynb  06_feat_extraction.ipynb  07_advanced_models.ipynb  07_bayes.ipynb  08_lda_lr.ipynb  08_second_order.ipynb  09.ipynb  09_fft.ipynb  09_lda_lr.ipynb  10_nicv.ipynb  config.py  confignb.py  eda.ipynb
reports/: ASCAD_v1.md
sca/: cv.py  download.py  helpers.py  interactionskbest.py  models.py  plots.py  util.py  utils.py
sca_fused_ops/: Cargo.toml
sca_fused_ops/sca_fused_ops/: __init__.py  sca_fused_ops.pyi
sca_fused_ops/src/: lib.rs
scripts/: cv.py  download.py  evaluate.py  features_nicv.py  plots.py  test_fused.py  util.py
src/: ascad_tools.py  download_data.py  metrics.py  models.ipynb  plots.py  tools.py
trash/: 03_feature_extraction.ipynb  03_feature_extraction_ttest.ipynb  04_feature_analysis_ttest.ipynb  07_advanced_models.ipynb  08_adv_feat_eng.ipynb  (+4 more)
